--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+
+.login {
+  position: fixed;
+  margin: auto;
+}
