--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,30 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .login {
-  position: fixed;
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+input {
+  display: block;
+  width: 20rem;
+  height: 2rem;
+  padding: 0.5rem;
+  font-size: 1.1em;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+
+button {
+  border: none;
+  padding: 1rem;
+  width: 21.2rem;
+  font-size: 1.2em;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #c5c5c5;
 }
