--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,10 @@ button:hover {
   background-color: red
 }
 
+.card {
+  cursor: pointer;
+}
+
 .gamecards {
   display: flex;
   padding: 25px;
