--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,15 @@ form {
   font-weight: 500;
   margin-bottom: 2rem;
 }
+.quiz-input {
+  display: block;
+  width: 20rem;
+  height: 2rem;
+  padding: 0.5rem;
+  font-size: 1.1em;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
 
 button {
   border: none;
@@ -128,6 +137,7 @@ button {
 
 .quiz-btn {
   border: none;
+  margin-top: 1rem;
   padding: 1rem;
   width: 21.2rem;
   font-size: 1.2em;
