--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #373a47;
+  background-color: whitesmoke;
 }
 
 .header {
@@ -86,12 +86,13 @@ Note: Beware of modifying this element as it can break the animations - you shou
   justify-content: center;
   padding: 5rem;
 }
+
 .register {
   text-align: center;
   display: flex;
   justify-content: center;
   padding: 5rem;
-} 
+}
 
 form {
   padding: 10px;
@@ -117,6 +118,16 @@ form {
   margin-bottom: 2rem;
 }
 
+.quiz-input {
+  display: block;
+  width: 20rem;
+  height: 2rem;
+  padding: 0.5rem;
+  font-size: 1.1em;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+
 button {
   border: none;
   padding: 1rem;
@@ -126,14 +137,28 @@ button {
   cursor: pointer;
 }
 
+.quiz-btn {
+  border: none;
+  margin-top: 1rem;
+  padding: 1rem;
+  width: 21.2rem;
+  font-size: 1.2em;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+.quiz-btn:hover {
+  background-color: peru
+}
+
 button:hover {
-  background-color: #c5c5c5;
+  background-color: goldenrod
 }
 
 .header button {
   position: fixed;
   width: fit-content;
-  height: fit-content ;
+  height: fit-content;
   right: 20px;
   top: 8px;
   background-color: #373a47;
@@ -156,87 +181,74 @@ button:hover {
 
 .decks {
   display: flex;
-  flex-wrap: nowrap;
-  overflow: hidden;
+  flex-wrap: wrap;
   padding-top: 100px;
+  overflow: hidden;
 }
 
-.deck-History img {
-  width: 90%;
-  background-color: #000;
-}
-.deck-Sports img {
-  width: 90%;
-  background-color: #000;
+.decks div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: .5rem;
+  height: 20rem;
+  width: 400px;
 }
 
-.deck-History a {
+.decks div img {
+  flex-shrink: 0;
+  width: auto;
+  height: 100%;
+  opacity: 50%;
+  z-index: 10;
+}
+
+.decks div h1 {
+  position: absolute;
+  z-index: 999;
+  justify-self: center;
+  align-self: center;
+}
+
+.decks div p {
+  position: fixed;
+  max-width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 100;
+  justify-self: center;
+  align-self: center;
+}
+
+.decks div a {
   color: bisque;
 }
 
 .deck-Sports {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  cursor: pointer;
   background-color: crimson;
-  padding: .8rem;
-  border-radius: .5rem;
-  height: 20rem;
-  width: 100%;
-  min-width: 100%;
 }
 
 .deck-arts_and_leisure {
-  align-items: center;
-    justify-content: center;
-    text-align: center;
-    cursor: pointer;
-    background-color: darkmagenta;
-    padding: .8rem;
-    border-radius: .5rem;
-    height: 20rem;
-    width: 100%;
-    min-width: 100%;
+  background-color: darkmagenta;
 }
 
 .deck-History {
-  align-items: center;
-    justify-content: center;
-    text-align: center;
-    cursor: pointer;
-    background-color: navy;
-    padding: .8rem;
-    border-radius: .5rem;
-    height: 20rem;
-    width: 100%;
-    min-width: 100%;
+
+  background-color: navy;
 }
 
 .deck-Music {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  cursor: pointer;
+
   background-color: peru;
-  padding: .8rem;
-  border-radius: .5rem;
-  height: 20rem;
-  width: 100%;
-  min-width: 100%;
+
 }
 
 .deck-Science {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  cursor: pointer;
+
   background-color: seagreen;
-  padding: .8rem;
-  border-radius: .5rem;
-  height: 20rem;
-  width: 100%;
-  min-width: 100%;
+
 }
 
 .gamecards {
@@ -248,4 +260,12 @@ button:hover {
 a {
   color: whitesmoke;
 
+}
+
+.quiz {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8rem;
+  padding: 10%;
+  margin: auto;
 }
