--- a/src/App.css
+++ b/src/App.css
@@ -306,6 +306,18 @@ a {
   margin: auto;
 }
 
+.quiz form div {
+  background: gainsboro;
+  width: 95%;
+  border-radius: 10px;
+  padding: 3%;
+  margin-bottom: 5%;
+}
+
 form {
   font-family: sans-serif;
+}
+
+form h2 {
+  margin-top: 0;
 }
